[gd_scene load_steps=20 format=2]

[ext_resource path="res://addons/SDC/Scripts/Core/App.gd" type="Script" id=1]
[ext_resource path="res://addons/SDC/Scripts/Controls/CharactersBtn.gd" type="Script" id=2]
[ext_resource path="res://addons/SDC/Scripts/Controls/TranslatedButton.gd" type="Script" id=3]
[ext_resource path="res://addons/SDC/Components/DialInfoPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/SDC/Components/ConfigPanel/ConfigPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/SDC/Components/PlayPanel/PlayPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/SDC/Components/EventPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/SDC/Components/SelectBranchMenuButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/SDC/Resources/icons/archive.svg" type="Texture" id=9]
[ext_resource path="res://addons/SDC/Resources/icons/settings.svg" type="Texture" id=10]
[ext_resource path="res://addons/SDC/Resources/icons/ellipsis-vertical.svg" type="Texture" id=11]
[ext_resource path="res://addons/SDC/Components/CustomParams/CustomParamsPanel.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/SDC/Resources/icons/import.svg" type="Texture" id=13]
[ext_resource path="res://addons/SDC/Resources/icons/plus.svg" type="Texture" id=14]
[ext_resource path="res://addons/SDC/Resources/icons/play.svg" type="Texture" id=15]
[ext_resource path="res://addons/SDC/Resources/icons/export.svg" type="Texture" id=16]
[ext_resource path="res://addons/SDC/Resources/icons/file.svg" type="Texture" id=17]
[ext_resource path="res://addons/SDC/Resources/dial_editor_theme.tres" type="Theme" id=18]

[sub_resource type="GDScript" id=1]
script/source = "tool
extends Panel


# Declare member variables here. Examples:
var _content: Dictionary
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


func update_content(content: Dictionary):
	_content = content
	
	# Upper panel
	$HBoxContainer/HiddenCheck.pressed = content[\"hidden\"]
	$HBoxContainer/ClosedCheck.pressed = content[\"closed\"]
	$HBoxContainer/HideSelfCheck.pressed = content[\"hide_self\"]
	$VBoxContainer2/Panel4/ChoiceCheckBox.pressed = content[\"choice\"]
	$VBoxContainer2/Panel3/OrCheckBox.pressed = content[\"or_cond\"]
	
	if (!content[\"event\"].empty()):
		$HBoxContainer/Control/SignalText.text = content[\"event\"][\"name\"]
		$HBoxContainer/Control/EventOptionsBtn.disabled = (content[\"event\"][\"name\"] == \"\")
	else:
		$HBoxContainer/Control/SignalText.text = \"\"
		$HBoxContainer/Control/EventOptionsBtn.disabled = true

	$VBoxContainer2/Panel2/ChangeStartedBtn.set_text(content[\"change_started\"])

	# Hide branches info
	var arr_len = content[\"hide\"].size() 
	for ind in range(0,  6):
		var item = $VBoxContainer2/Panel/VBoxContainer.get_child(ind)
		if (arr_len > ind):
			item.text = content[\"hide\"][ind]
			item.self_modulate.a = 1
		else:
			item.set_text(\"\")
			item.self_modulate.a = 0.33
	
	# Show branches info
	arr_len = content[\"show\"].size() 
	for ind in range(0,  6):
		var item = $VBoxContainer2/Panel4/VBoxContainer.get_child(ind)
		if (arr_len > ind):
			item.text = content[\"show\"][ind]
			item.self_modulate.a = 1
		else:
			item.set_text(\"\")
			item.self_modulate.a = 0.33
	
	# Vars info
	arr_len = content[\"vars\"].size() 
	for ind in range(0,  5):
		var item = $VBoxContainer2/Panel2/VBoxContainer2.get_child(ind)
		if (arr_len > ind):
			item.get_child(0).set_text(content[\"vars\"][ind][\"key\"])
			item.get_child(1).text = content[\"vars\"][ind][\"op\"]
			item.get_child(2).text = content[\"vars\"][ind][\"value\"]
		else:
			item.get_child(0).set_text(\"\")
			item.get_child(1).text = \"=\"
			item.get_child(2).text = \"\"
	
	# If info
	arr_len = content[\"if\"].size() 
	for ind in range(0,  5):
		var item = $VBoxContainer2/Panel3/VBoxContainer2.get_child(ind)
		if (arr_len > ind):
			item.get_child(0).set_text(content[\"if\"][ind][\"key\"])
			item.get_child(1).text = content[\"if\"][ind][\"op\"]
			item.get_child(2).text = content[\"if\"][ind][\"value\"]
		else:
			item.get_child(0).set_text(\"\")
			item.get_child(1).text = \"==\"
			item.get_child(2).text = \"\"

func _on_HiddenCheck_toggled(button_pressed):
	_content[\"hidden\"] = button_pressed
	AppInstance.app_win.update_branch_states()


func _on_ClosedCheck_toggled(button_pressed):
	_content[\"closed\"] = button_pressed
	AppInstance.app_win.update_branch_states()

func _on_HideSelfCheck_toggled(button_pressed):
	_content[\"hide_self\"] = button_pressed

func _on_ChoiceCheckBox_toggled(button_pressed):
	_content[\"choice\"] = button_pressed
	
func _on_OrCheckBox_toggled(button_pressed):
	_content[\"or_cond\"] = button_pressed
	
func _on_SignalText_text_changed(new_text):
	if (new_text != \"\"):
		_content[\"event\"][\"name\"] = new_text
		$HBoxContainer/Control/EventOptionsBtn.disabled = (new_text == \"\")
	else:
		_content[\"event\"] = {}
	


func _on_HideBranch_change_value():
	var arr: Array = []
	for item in $VBoxContainer2/Panel/VBoxContainer.get_children():
		if (item.get_text() != \"\"):
			arr.append(item.text)
	_content[\"hide\"] = arr
	AppInstance.app_win.update_branch_states()


func _on_ShowBranch_change_value():
	var arr: Array = []
	for item in $VBoxContainer2/Panel4/VBoxContainer.get_children():
		if (item.get_text() != \"\"):
			arr.append(item.text)
	_content[\"show\"] = arr
	AppInstance.app_win.update_branch_states()


func _on_Var_text_changed(new_text):
	save_vars_info()

func save_vars_info():
	var arr: Array = []
	var container = $VBoxContainer2/Panel2/VBoxContainer2
	for item in container.get_children():
		if (item.get_child(0).get_text() != \"\"):
			arr.append({\"key\": item.get_child(0).get_text(), \"op\": item.get_child(1).text, \"value\": item.get_child(2).text})
	_content[\"vars\"] = arr

func _on_if_text_changed(new_text):
	save_if_info()

func save_if_info():
	var arr: Array = []
	for item in $VBoxContainer2/Panel3/VBoxContainer2.get_children():
		if (item.get_child(0).get_text() != \"\"):
			arr.append({\"key\": item.get_child(0).get_text(), \"op\": item.get_child(1).text, \"value\": item.get_child(2).text})
	_content[\"if\"] = arr

func _on_ChangeStartedBtn_change_value():
	_content[\"change_started\"] = $VBoxContainer2/Panel2/ChangeStartedBtn.get_text()

func _on_EventOptionsBtn_pressed():
	AppInstance.app_win.event_panel.show_with_content(_content[\"event\"])
"

[node name="Control" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 18 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolbarPanel" type="Panel" parent="MainVBox"]
margin_right = 1432.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MainVBox/ToolbarPanel"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -1.99988
margin_bottom = 16.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddBranchButton" type="Button" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_right = 44.0
margin_bottom = 38.0
hint_tooltip = "Добавить новую ветку"
icon = ExtResource( 14 )
script = ExtResource( 3 )
hint_id = "add_new_branch"

[node name="SaveBtn" type="Button" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 48.0
margin_right = 92.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 0 )
hint_tooltip = "Сохранить текущий диалог"
icon = ExtResource( 9 )
script = ExtResource( 3 )
hint_id = "save_dialog"

[node name="PlayBtn" type="Button" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 96.0
margin_right = 140.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 0 )
hint_tooltip = "Запустить диалог"
icon = ExtResource( 15 )
script = ExtResource( 3 )
hint_id = "play_dialog"

[node name="Control2" type="Control" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 144.0
margin_right = 220.0
margin_bottom = 38.0
rect_min_size = Vector2( 76, 0 )

[node name="ImportBtn" type="Button" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 224.0
margin_right = 268.0
margin_bottom = 38.0
hint_tooltip = "Импортировать текст"
icon = ExtResource( 13 )
script = ExtResource( 3 )
hint_id = "import_text"

[node name="ExportBtn" type="Button" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 272.0
margin_right = 316.0
margin_bottom = 38.0
hint_tooltip = "Экспортировать весь текст"
icon = ExtResource( 16 )
script = ExtResource( 3 )
hint_id = "export_text"

[node name="ConfigBtn" type="Button" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 320.0
margin_right = 364.0
margin_bottom = 38.0
hint_tooltip = "Конфигурация персонажей и переменных"
icon = ExtResource( 10 )
script = ExtResource( 3 )
hint_id = "config"

[node name="EditBranchesBtn" type="Button" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 368.0
margin_right = 412.0
margin_bottom = 38.0
hint_tooltip = "Режим редактирования веток"
toggle_mode = true
icon = ExtResource( 11 )
script = ExtResource( 3 )
hint_id = "edit_mode"

[node name="CharacterBtn" type="MenuButton" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 416.0
margin_right = 563.0
margin_bottom = 38.0
rect_min_size = Vector2( 80, 0 )
hint_tooltip = "[Хозяин диалога]"
text = "[Хозяин диалога]"
align = 0
items = [ "char_dial", null, 0, false, false, 0, 0, null, "", false, "char_dial", null, 0, false, false, 1, 0, null, "", false, "char_dial", null, 0, false, false, 2, 0, null, "", false, "char_dial", null, 0, false, false, 3, 0, null, "", false, "char_dial", null, 0, false, false, 4, 0, null, "", false, "char_dial", null, 0, false, false, 5, 0, null, "", false, "char_dial", null, 0, false, false, 6, 0, null, "", false, "char_dial", null, 0, false, false, 7, 0, null, "", false, "char_dial", null, 0, false, false, 8, 0, null, "", false, "char_dial", null, 0, false, false, 9, 0, null, "", false, "char_dial", null, 0, false, false, 10, 0, null, "", false, "char_dial", null, 0, false, false, 11, 0, null, "", false, "char_dial", null, 0, false, false, 12, 0, null, "", false, "char_dial", null, 0, false, false, 13, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 14, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 15, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 16, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 17, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 18, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 19, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 20, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 21, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 22, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 23, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 24, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 25, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 26, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 27, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 28, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 29, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 30, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 31, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 32, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 33, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 34, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 35, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 36, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 37, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 38, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 39, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 40, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 41, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 42, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 43, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 44, 0, null, "", false, "[Хозяин диалога]", null, 0, false, false, 45, 0, null, "", false ]
script = ExtResource( 2 )
placeholder = "char_dial"

[node name="AutobranchBtn" parent="MainVBox/ToolbarPanel/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 567.0
margin_right = 718.0
margin_bottom = 38.0
rect_min_size = Vector2( 80, 0 )
hint_tooltip = "[Стартовая ветка]"
text = "[Стартовая ветка]"
items = [ "start_branch", null, 0, false, false, 0, 0, null, "", false, "start_branch", null, 0, false, false, 1, 0, null, "", false, "start_branch", null, 0, false, false, 2, 0, null, "", false, "start_branch", null, 0, false, false, 3, 0, null, "", false, "start_branch", null, 0, false, false, 4, 0, null, "", false, "start_branch", null, 0, false, false, 5, 0, null, "", false, "start_branch", null, 0, false, false, 6, 0, null, "", false, "start_branch", null, 0, false, false, 7, 0, null, "", false, "start_branch", null, 0, false, false, 8, 0, null, "", false, "start_branch", null, 0, false, false, 9, 0, null, "", false, "start_branch", null, 0, false, false, 10, 0, null, "", false, "start_branch", null, 0, false, false, 11, 0, null, "", false, "start_branch", null, 0, false, false, 12, 0, null, "", false, "start_branch", null, 0, false, false, 13, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 14, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 15, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 16, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 17, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 18, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 19, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 20, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 21, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 22, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 23, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 24, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 25, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 26, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 27, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 28, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 29, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 30, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 31, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 32, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 33, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 34, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 35, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 36, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 37, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 38, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 39, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 40, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 41, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 42, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 43, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 44, 0, null, "", false, "[Стартовая ветка]", null, 0, false, false, 45, 0, null, "", false ]
placeholder = "start_branch"

[node name="Control" type="Control" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 722.0
margin_right = 998.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="PathEdit" type="LineEdit" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 1002.0
margin_right = 1202.0
margin_bottom = 38.0
rect_min_size = Vector2( 200, 0 )
editable = false
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewBtn" type="Button" parent="MainVBox/ToolbarPanel/HBoxContainer"]
visible = false
margin_left = 1336.0
margin_right = 1380.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 0 )
hint_tooltip = "Создать новый файл диалога"
icon = ExtResource( 17 )
script = ExtResource( 3 )
hint_id = "new_dialog"

[node name="OpenBtn2" type="Button" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 1206.0
margin_right = 1315.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 0 )
hint_tooltip = "Открыть существующий файл диалога"
text = "JSON to RES"
script = ExtResource( 3 )
hint_id = "open_dialog"

[node name="ResToJSON" type="Button" parent="MainVBox/ToolbarPanel/HBoxContainer"]
margin_left = 1319.0
margin_right = 1428.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 0 )
hint_tooltip = "Открыть существующий файл диалога"
text = "RES to JSON"
script = ExtResource( 3 )

[node name="MainHBox" type="HBoxContainer" parent="MainVBox"]
margin_top = 46.0
margin_right = 1432.0
margin_bottom = 900.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BranchesScroll" type="ScrollContainer" parent="MainVBox/MainHBox"]
visible = false
margin_right = 954.0
margin_bottom = 1034.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BranchesList" type="VBoxContainer" parent="MainVBox/MainHBox/BranchesScroll"]
margin_right = 954.0
size_flags_horizontal = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainVBox/MainHBox"]
margin_right = 1432.0
margin_bottom = 854.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="InfoScroll" type="ScrollContainer" parent="MainVBox/MainHBox/ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = -2.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoContainer" type="VBoxContainer" parent="MainVBox/MainHBox/ColorRect/InfoScroll"]
margin_right = 1428.0
margin_bottom = 854.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" parent="MainVBox/MainHBox/ColorRect/InfoScroll/InfoContainer" instance=ExtResource( 4 )]
margin_right = 1428.0
script = SubResource( 1 )

[node name="AddPhrase" type="Button" parent="MainVBox/MainHBox/ColorRect/InfoScroll/InfoContainer/Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -34.0
margin_right = 129.0
margin_bottom = -2.0
rect_min_size = Vector2( 125, 28 )
text = "Новая фраза"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
text_id = "add_phrase"

[node name="ScrollContainer" type="ScrollContainer" parent="MainVBox/MainHBox/ColorRect/InfoScroll/InfoContainer"]
margin_top = 278.0
margin_right = 1428.0
margin_bottom = 854.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="PhrasesVBox" type="VBoxContainer" parent="MainVBox/MainHBox/ColorRect/InfoScroll/InfoContainer/ScrollContainer"]
margin_right = 1428.0
size_flags_horizontal = 3

[node name="AddFirst" type="Button" parent="MainVBox/MainHBox/ColorRect"]
visible = false
margin_left = 6.0
margin_top = 280.0
margin_right = 131.0
margin_bottom = 288.0
rect_min_size = Vector2( 125, 28 )
text = "Добавить первую фразу главного героя"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
text_id = "add_first"

[node name="JsonToResDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.5
margin_top = -265.5
margin_right = 427.5
margin_bottom = 265.5
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Godot/smart_dialogue_creator"
current_path = "/Godot/smart_dialogue_creator/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.5
margin_top = -265.5
margin_right = 427.5
margin_bottom = 265.5
window_title = "Сохранить файл"
access = 2
current_dir = "/Godot/smart_dialogue_creator"
current_file = "Dialog_new"
current_path = "/Godot/smart_dialogue_creator/Dialog_new"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResToJsonDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.5
margin_top = -265.5
margin_right = 427.5
margin_bottom = 265.5
access = 2
current_dir = "/Godot/smart_dialogue_creator"
current_file = "Dialog_new"
current_path = "/Godot/smart_dialogue_creator/Dialog_new"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.5
margin_top = -265.5
margin_right = 427.5
margin_bottom = 265.5
window_title = "export_localization"
access = 2
current_dir = "/Godot/smart_dialogue_creator"
current_file = "loc.csv"
current_path = "/Godot/smart_dialogue_creator/loc.csv"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.5
margin_top = -265.5
margin_right = 427.5
margin_bottom = 265.5
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Godot/smart_dialogue_creator"
current_path = "/Godot/smart_dialogue_creator/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigPanel" parent="Panel" instance=ExtResource( 5 )]
visible = false
margin_left = -470.0
margin_right = 470.0
rect_min_size = Vector2( 940, 600 )

[node name="PlayPanel" parent="Panel" instance=ExtResource( 6 )]
visible = false

[node name="EventPanel" parent="Panel" instance=ExtResource( 7 )]
visible = false

[node name="CustomParamsPanel" parent="Panel" instance=ExtResource( 12 )]
visible = false

[connection signal="pressed" from="MainVBox/ToolbarPanel/HBoxContainer/AddBranchButton" to="." method="_on_AddBranchButton_pressed"]
[connection signal="pressed" from="MainVBox/ToolbarPanel/HBoxContainer/SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="MainVBox/ToolbarPanel/HBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="MainVBox/ToolbarPanel/HBoxContainer/ImportBtn" to="." method="_on_ImportBtn_pressed"]
[connection signal="pressed" from="MainVBox/ToolbarPanel/HBoxContainer/ExportBtn" to="." method="_on_ExportBtn_pressed"]
[connection signal="pressed" from="MainVBox/ToolbarPanel/HBoxContainer/ConfigBtn" to="." method="_on_ConfigBtn_pressed"]
[connection signal="toggled" from="MainVBox/ToolbarPanel/HBoxContainer/EditBranchesBtn" to="." method="_on_EditBranchesBtn_toggled"]
[connection signal="change_value" from="MainVBox/ToolbarPanel/HBoxContainer/CharacterBtn" to="." method="_on_CharacterBtn_change_value"]
[connection signal="change_value" from="MainVBox/ToolbarPanel/HBoxContainer/AutobranchBtn" to="." method="_on_AutobranchBtn_change_value"]
[connection signal="pressed" from="MainVBox/ToolbarPanel/HBoxContainer/NewBtn" to="." method="_on_NewBtn_pressed"]
[connection signal="pressed" from="MainVBox/ToolbarPanel/HBoxContainer/OpenBtn2" to="." method="_on_OpenBtn2_pressed"]
[connection signal="pressed" from="MainVBox/ToolbarPanel/HBoxContainer/ResToJSON" to="." method="_on_ResToJSON_pressed"]
[connection signal="pressed" from="MainVBox/MainHBox/ColorRect/InfoScroll/InfoContainer/Panel/AddPhrase" to="." method="_on_AddPhraseButton_pressed"]
[connection signal="pressed" from="MainVBox/MainHBox/ColorRect/AddFirst" to="." method="_on_AddFirst_pressed"]
[connection signal="file_selected" from="JsonToResDialog" to="." method="_on_OpenDialog_file_selected"]
[connection signal="file_selected" from="CreateDialog" to="." method="_on_CreateDialog_file_selected"]
[connection signal="file_selected" from="ResToJsonDialog" to="." method="_on_ResToJsonDialog_file_selected"]
[connection signal="file_selected" from="ExportDialog" to="." method="_on_ExportDialog_file_selected"]
[connection signal="file_selected" from="ImportDialog" to="." method="_on_ImportDialog_file_selected"]
